...
                                valueRange = 0f..pdfSliderMaxPage.toFloat(),
                                enabled = pdfSliderMaxPage > 0,
                                activeColor = pdfReaderSliderColors.activeTrackColor,
                                inactiveColor = pdfReaderSliderColors.inactiveTrackColor,
                                thumbColor = pdfReaderSliderColors.thumbColor,
                                modifier = Modifier
                                    .testTag("PdfPageSlider")
                                    .weight(1f)
                                    .height(32.dp)
                            )

                            IconButton(
                                onClick = {
...
